# mai-lab-balanced-avl

./: CMakeLists.txt  input.txt  main.c  output.txt
avl/: avl.c  avl.h  avl_handlers.c  avl_handlers.h  avl_utils.c  avl_utils.h  utils.c
cli/: cli.c  cli.h
parser/: parser.c  parser.h
utils/: utils.c  utils.h
